--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,18 @@
     border: 1px dashed black;
 }
 
+.debug main .row1{
+    background-color: rgb(0, 0, 139);
+}
+
+.debug main .col-1{
+    background-color: rgb(238, 130, 238);
+}
+
+.debug .place .container{
+    background-color: red;
+}
+
 
 
 
@@ -22,19 +34,23 @@
     box-sizing: border-box;
 }
 
+
+/* Header */
+
 #app_header .container{
     width: 70%;
     margin: auto;
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 0.5rem;
+    align-items: center;
 }
 
 #app_header{
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
-#app_header ul{
+#app_header ul, .row1{
     display: flex;
 }
 
@@ -46,5 +62,29 @@ a{
     text-decoration: none;
     padding: 0.5rem;
 }
+
+/* Main */
+ 
+main .row1{
+    height: 544px;
+}
+
+.col-1{
+    width: 800px;
+    height: 400px;
+    margin: auto;
+}
+
+.place .container{
+    width: 70%;
+    height:700px;
+    margin:auto
+}
+
+
+
+
+
+
 
 /* Utility */
