--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,41 @@
     border: 1px dashed black;
 }
 
-.debug main .row1{
+.debug main>.container{
     background-color: rgb(0, 0, 139);
 }
 
-.debug main .col-1{
+.debug main .box-1{
     background-color: rgb(238, 130, 238);
+}
+
+.debug .place{
+    background-color: white;
 }
 
 .debug .place .container{
     background-color: red;
 }
 
+.debug .row-1{
+    background-color: yellow;
+}
 
+.debug .col-4{
+    background-color: pink;
+}
 
+.debug .col-8{
+    background-color: lightseagreen;
+}
 
+.debug .found, section.contact{
+    background-color: lightgray;
+}
 
+.debug .contact .container{
+    background-color: green;
+}
 
 /* Common */
 
@@ -50,7 +69,7 @@
     padding: 0.5rem;
 }
 
-#app_header ul, .row1{
+#app_header ul, main .container, .row-1, .contact{
     display: flex;
 }
 
@@ -65,24 +84,52 @@ a{
 
 /* Main */
  
-main .row1{
+main .container{
     height: 544px;
 }
 
-.col-1{
+.box-1{
     width: 800px;
     height: 400px;
     margin: auto;
 }
 
-.place .container{
-    width: 70%;
-    height:700px;
-    margin:auto
+.place{
+    padding: 1rem;
 }
 
+.place .container{
+    width: 70%;
+    height: 700px;
+    margin: auto;
+    align-items: center; 
+}
 
+.contact  .container{
+    width: 70%;
+    height: 1200px;
+    margin: 1rem auto;
+}
 
+.row-1{
+    width: 100%;
+    height: 600px;
+    align-items: center;
+}
+
+.col-4{
+    width: calc((100% / 12) * 4);
+    height: 500px;
+}
+
+.col-8{
+    width: calc((100% / 12) * 8);
+    height: 500px;
+}
+
+.col-12{
+    width: 100%;
+}
 
 
 
