--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@
     background-color: yellow;
 }
 
+.debug .col-2{
+    background-color: lightgreen;
+}
+
 .debug .col-4{
     background-color: pink;
 }
@@ -44,6 +48,17 @@
 .debug .contact .container{
     background-color: green;
 }
+
+.debug footer .container{
+    background-color: red;
+}
+
+
+.container-2{
+    background-color: brown;
+}
+
+
 
 /* Common */
 
@@ -69,7 +84,7 @@
     padding: 0.5rem;
 }
 
-#app_header ul, main .container, .row-1, .contact{
+#app_header ul, main .container, .row-1, .contact, .row-2{
     display: flex;
 }
 
@@ -111,23 +126,47 @@ main .container{
     margin: 1rem auto;
 }
 
-.row-1{
+footer .container{
+    width: 70%;
+    height: 600px;
+    margin: 1rem auto;
+}
+
+.container-2{
+    display: flex;
+    width: 70%;
+    margin: auto;
+    justify-content: space-between;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.row-1, .row-2{
     width: 100%;
     height: 600px;
     align-items: center;
 }
 
+
+.col-2{
+    width: calc((100% / 12) * 2);
+    height: 500px;
+    border: 1px dashed black;
+}
+
 .col-4{
     width: calc((100% / 12) * 4);
     height: 500px;
+    border: 1px dashed black;
 }
 
 .col-8{
     width: calc((100% / 12) * 8);
+    border: 1px dashed black;
     height: 500px;
 }
 
 .col-12{
+    border: 1px dashed black;
     width: 100%;
 }
 
